refactor: KAN-357 추천 조회 API Redis 캐시 적용